--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <script>
         // Conexión con el socket server
-        const socket = io('https://chat-backend-phi.vercel.app/');
+        const socket = io('http://localhost:8080');
 
         
         /// Para emitir
