config deploy prod

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <script>
         // Conexión con el socket server
-        const socket = io('http://localhost:8080');
+        const socket = io('https://react-chat-app.herokuapp.com/');
 
         
         /// Para emitir
