--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <script>
         // Conexión con el socket server
-        const socket = io('https://react-chat-app.herokuapp.com/');
+        const socket = io('https://chat-backend-eta.vercel.app/');
 
         
         /// Para emitir
