update changes backend

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <script>
         // Conexión con el socket server
-        const socket = io('https://chat-backend-eta.vercel.app/');
+        const socket = io('https://chat-backend-production-9aa4.up.railway.app/');
 
         
         /// Para emitir
